# Snake

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  config.h  main.c
src/client/: CMakeLists.txt  client.c  client.h  main.c
src/client/game/: CMakeLists.txt  game.c  game.h  game_window.c  game_window.h
src/client/menu/: CMakeLists.txt  menu.c  menu.h
src/client/network/: CMakeLists.txt  client_socket.c  client_socket.h
src/server/: CMakeLists.txt  main.c  server.c  server.h
src/server/game/: CMakeLists.txt  game.c  game.h  snake.c  snake.h
src/server/network/: CMakeLists.txt  server_socket.c  server_socket.h
